# CrabDiary

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controllers/: mod.rs  world_controller.rs
backend/src/db/: mod.rs
backend/src/db/repo/: mod.rs  world_repo.rs
backend/src/db/scripts/: 0_create_world_table.sql
backend/src/types/: error.rs  types.rs
frontend/: Cargo.toml
shared/: Cargo.toml
shared/src/domain/: mod.rs  post.rs  user.rs  world.rs  world_owner.rs
