[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# special attribute to build for another programming language
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# reusage of shared packages
shared = { version = "0.1.0", path = "../shared" }

# wasm client for web apps
yew = "0.19.3"
# JS to Rust and Rust to JS
wasm-bindgen = "0.2.79"
# common serializer
serde = { version = "1.0.136", features = ["derive"] }
# json serializer
serde_json = "1.0.79"
# allow drop errors with '?' sign
anyhow = "1.0.56"
# routing for yew
yew-router = "0.16.0"

# dev dependencies
# windows problem resoultion: https://rustwasm.github.io/wasm-pack/installer/#
# cargo install cargo-watch --locked # to download specified yanked package
# cargo install --locked trunk # without trunk we can't serve

# cargo install wasm-pack
# cargo install --force cargo-make
# cargo install simple-http-server